Fix issue with showing the filenames on the Thumbnail Panel